# mano-tracker

./: .gitignore  BACKLOG.md  CLAUDE.md  DESIGN-MANUAL.md  README.md  app.py  dashboard_utils.py  pyproject.toml
.github/workflows/: ch_enrichment_backfill.yml  deploy-frontend.yml  update_daily.yml  update_data.yml
.streamlit/: config.toml
data/: ch_enrich_chunk_0.csv  ch_enrich_chunk_1.csv  mano_kpis.csv  peer_benchmarks.csv  tracker.db
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/data/: backtest.json  balance_sheet.json  chain_constants.json  freshness.json  gazette_explorer.json  gazette_recent.json  insolvency_timeseries.json  ip_network.json  kpis.json  leadlag.json  mano_kpis.json  mano_price_history.json  peers.json  petitions_cvl.json  pipeline_assumptions.json  pipeline_overview.json  regional.json  seasonal.json  sic_sectors.json  thesis_flow.json  tornado.json  valuation.json  valuation_bridge.json
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/data/: thesisScoring.ts  ukRegions.geo.json  valuationBridge.ts
frontend/src/hooks/: useData.ts
frontend/src/lib/: buildInfo.ts  captions.ts  chain.ts  (+7 more)
ingest/: boe_bank_rate.py  build_ip_network.py  caselaw_feed.py  ch_insolvency_enrichment.py  companies_house.py  export_frontend_data.py  fca_short_positions.py  gazette_backfill.py  gazette_notices.py  insolvency_stats.py  mano_price.py  ons_business_demography.py  record_level.py  seed_kpis.py
model/: pipeline.py
pages/: 1_prehlad.py  2_trh.py  3_model.py  4_spolocnost.py  5_diagnostika.py
(+89 files in other folders)
